--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             height: 51px;
         }
         h1 {
-            font-family: arthur;
+            font-family: arttexthur;
         }
         ul li { 
             display: inline;
@@ -107,8 +107,9 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Cursos</a></li>
-            <li><a href="#">Inscrições</a></li>
+            <li><a href="./pages/formulario.html">Inscrições</a></li>
             <li><a href="#">Sobre</a></li>
+            
         </ul>
     </nav>
     <div id="conteudo">
